- Fixed bug #43993 (mb_substr_count() behaves differently to substr_count() with overlapping needles)